--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">Final-Loan-App-zalessky</string>
+    <string name="app_name">Final-Loan-App</string>
 </resources>
